update template response handler
